--- a/heroku.yml
+++ b/heroku.yml
@@ -2,12 +2,4 @@ build:
   docker:
     web: Dockerfile
 run:
-  web: - gunicorn
-         - --bind=0.0.0.0:8000
-         - --certfile=certs/development/server.crt
-         - --keyfile=certs/development/server.key
-         - --access-logfile=-
-         - --error-logfile=-
-         - --log-level=info
-         - --reload
-         - changelogger.wsgi
+  web: - gunicorn --bind=0.0.0.0:8000 --access-logfile=- --error-logfile=- --log-level=info --reload changelogger.wsgi
