Added run migration config

--- a/heroku.yml
+++ b/heroku.yml
@@ -1,5 +1,9 @@
 build:
   docker:
     web: Dockerfile
+release:
+  command:
+    - python manage.py migrate
+  image: web
 run:
   web: gunicorn changelogger.wsgi
