--- a/.travis.yml
+++ b/.travis.yml
@@ -4,5 +4,5 @@ cache: pip
 python:
   - '3.7'
 script:
-  - python manage.py collectstatic --clear
+  - python manage.py collectstatic --clear --noinput
   - python manage.py test
