--- a/heroku.yml
+++ b/heroku.yml
@@ -4,7 +4,7 @@ build:
 release:
   command:
     - python manage.py migrate
-    - python manage.py collectstatic --noinput
+    - python manage.py collectstatic --clear --noinput
   image: web
 run:
   web: gunicorn changelogger.wsgi
