--- a/.travis.yml
+++ b/.travis.yml
@@ -4,5 +4,6 @@ cache: pip
 python:
   - '3.7'
 script:
+  - black --check .
   - python manage.py collectstatic --clear --noinput
   - python manage.py test
