--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,6 +17,10 @@ jobs:
         run: |
           pip install black
           black --check .
+      - name: Check type annotations with mypy
+        run: |
+          pip install mypy
+          mypy .
       - name: Collect static
         run: |
           python manage.py collectstatic --noinput
