--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -23,7 +23,7 @@ jobs:
           mypy .
       - name: Collect static
         run: |
-          python manage.py collectstatic --clear --noinput
+          python manage.py collectstatic --noinput
       - name: Run tests
         run: |
           python manage.py test
