--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
-Django==3.0.3
-djangorestframework==3.11.0
+Django==3.2.*
+djangorestframework==3.14.*
 psycopg2-binary==2.9.5
 requests==2.22.0
 Markdown==3.1.1
